code/java/InvestmentBankingOfficeRefresh/v0/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Investment Banking Office Refresh client library for Java

[![Maven Central](https://img.shields.io/maven-central/v/com.factset.sdk/investmentbankingofficerefresh)](https://search.maven.org/artifact/com.factset.sdk/investmentbankingofficerefresh)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Service for refreshing models with refreshable FactSet objects (e.g., =FDS codes)

This Java package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 0.1.0
- Package version: 0.20.0
- Build package: org.openapitools.codegen.languages.JavaClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Java JDK >= 1.8

## Installation

### Maven

Add these dependencies to your project's POM:

```xml
<dependency>
  <groupId>com.factset.sdk</groupId>
  <artifactId>utils</artifactId>
  <version>1.0.0</version>
</dependency>
<dependency>
  <groupId>com.factset.sdk</groupId>
  <artifactId>investmentbankingofficerefresh</artifactId>
  <version>0.20.0</version>
  <scope>compile</scope>
</dependency>
```

### Gradle

Add these dependencies to your project's build file:

```groovy
  repositories {
    mavenCentral()
  }

  dependencies {
    implementation "com.factset.sdk:utils:1.0.0"
    implementation "com.factset.sdk:investmentbankingofficerefresh:0.20.0"
  }
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Java environment.
   1. Install and activate Java 1.8+
   2. Install [maven](https://maven.apache.org/install.html) or [gradle](https://gradle.org/install/)
3. [Install dependencies](#installation).
4. Run the following:

```java
import com.factset.sdk.InvestmentBankingOfficeRefresh.*;
import com.factset.sdk.InvestmentBankingOfficeRefresh.auth.*;
import com.factset.sdk.InvestmentBankingOfficeRefresh.models.*;
import com.factset.sdk.InvestmentBankingOfficeRefresh.api.ModelRefreshApi;
import com.factset.sdk.InvestmentBankingOfficeRefresh.api.ModelRefreshApi.GetFileByIdResponseWrapper;

import com.factset.sdk.utils.authentication.ConfidentialClient;


public class ModelRefreshApiExample {

    public static void main(String[] args) throws Exception {
        // Examples for each supported authentication method are below,
        // choose one that satisfies your use case.

        /* (Preferred) OAuth 2.0: FactSetOAuth2 */
        // See https://github.com/FactSet/enterprise-sdk#oauth-20
        // for information on how to create the app-config.json file
        // See https://github.com/FactSet/enterprise-sdk-utils-java#authentication
        // for more information on using the ConfidentialClient class
        ConfidentialClient confidentialClient = new ConfidentialClient("./path/to/config.json");
        ApiClient defaultClient = new ApiClient()
          .setFactSetOAuth2Client(confidentialClient);

        /* Basic authentication: FactSetApiKey */
        // See https://github.com/FactSet/enterprise-sdk#api-key
        // ApiClient defaultClient = new ApiClient()
        //   .setUsername("YOUR USERNAME")
        //   .setPassword("YOUR PASSWORD");

        ModelRefreshApi apiInstance = new ModelRefreshApi(defaultClient);
        java.util.UUID id = new java.util.UUID(); // java.util.UUID | Resource ID
        String outputFileName = "outputFileName_example"; // String | Optional name for returned output file as set in the Content-Disposition response header.
        try {
            GetFileByIdResponseWrapper result = apiInstance.getFileById(id, outputFileName);
            switch(result.getStatusCode()) {
            
                case 200:
                    System.out.println(result.getResponse200()); // File
            
                case 202:
                    System.out.println(result.getResponse202()); // JobStatus
            
            }
        } catch (ApiException e) {
            System.err.println("Exception when calling ModelRefreshApi#getFileById");
            System.err.println("Status code: " + e.getCode());
            System.err.println("Reason: " + e.getResponseBody());
            System.err.println("Response headers: " + e.getResponseHeaders());
            e.printStackTrace();
        }
    }
}

```

### Using a Proxy

To add a HTTP proxy for the API client, use `ClientConfig`:
```java

import org.glassfish.jersey.apache.connector.ApacheConnectorProvider;
import org.glassfish.jersey.client.ClientConfig;
import org.glassfish.jersey.client.ClientProperties;
import com.factset.sdk.InvestmentBankingOfficeRefresh.*;
import com.factset.sdk.InvestmentBankingOfficeRefresh.api.ModelRefreshApi;

...

ApiClient defaultClient = Configuration.getDefaultApiClient();
ClientConfig clientConfig = defaultClient.getClientConfig();
clientConfig.connectorProvider(new ApacheConnectorProvider());
clientConfig.property(ClientProperties.PROXY_URI, "http://proxy_url_here");
clientConfig.property(ClientProperties.PROXY_USERNAME, "proxy_username");
clientConfig.property(ClientProperties.PROXY_PASSWORD, "proxy_password");
defaultClient.setClientConfig(clientConfig);

ModelRefreshApi apiInstance = new ModelRefreshApi(defaultClient);

```

### Debugging
The SDK uses the standard library class [`java.util.logging.Logger`](https://docs.oracle.com/javase/7/docs/api/java/util/logging/Logger.html).

Calling `setDebugging(true)` on an instance of the `ApiClient` will return an instance of the `ApiClient` that has set the logger's [`Level`](https://docs.oracle.com/javase/7/docs/api/java/util/logging/Level.html) to `ALL`.

**Note**: This prints out sensitive information (e.g. the full request and response). Use with care.

```java
import com.factset.sdk.InvestmentBankingOfficeRefresh.ApiClient;

public class Main {
    public static void main(String[] args) throws Exception {
        ApiClient defaultClient = new ApiClient();
        defaultClient.setDebugging(true);

        // Setup authentication and make request with apiInstance...
    }
}
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/office-refresh/v0*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*ModelRefreshApi* | [**getFileById**](docs/ModelRefreshApi.md#getFileById) | **GET** /refresh/{id} | Retrieve a calculated file by resource ID.
*ModelRefreshApi* | [**getStatusById**](docs/ModelRefreshApi.md#getStatusById) | **GET** /refresh/{id}/status | Get the status of the refresh job with the given resource ID
*ModelRefreshApi* | [**postWorkbook**](docs/ModelRefreshApi.md#postWorkbook) | **POST** /refresh | Upload a model


## Documentation for Models

 - [Error](docs/Error.md)
 - [Errors](docs/Errors.md)
 - [JobStatus](docs/JobStatus.md)
 - [JobStatusData](docs/JobStatusData.md)


## Documentation for Authorization

Authentication schemes defined for the API:
### FactSetApiKey


- **Type**: HTTP basic authentication

### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Recommendation

It's recommended to create an instance of `ApiClient` per thread in a multi-threaded environment to avoid any potential issues.

# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
